# Agentflow

./: .gitignore  .pre-commit-config.yaml  AGENT_CLASS_FINAL.md  AGENT_CLASS_MIGRATION.md  AGENT_CLASS_UPDATE_GOOGLE.md  AgentClass.md  DEPENDENCY_INJECTION_IMPLEMENTATION.md  Docsplan.md  EVALUATION_RESEARCH_SUMMARY.md  FuturePlan.md  Job.md  LICENSE  LITELLM_RESEARCH_SUMMARY.md  LOGGING_IMPLEMENTATION.md  Makefile  OPTIONAL_DEPENDENCIES_SUMMARY.md  Overview.md  PAUSE_RESUME_SUMMARY.md  Plan.md  Plan2.md  README.md  RELEASE_NOTES_0.5.6.md  STREAMING_IMPLEMENTATION_SUMMARY.md  StreamingPlan.md  Suggestion.md  TASK_5_COMPLETION_REPORT.md  TASK_COMPLETION_REPORT.md  TESTING.md  TODO.txt  TaskPlan.md  UNIFIED_INVOKE_SUMMARY.md  VALIDATOR_IMPLEMENTATION.md  answer.md  changelogs.md  comprehensive_streaming_test.py  demo_event_publishing.py  mkdocs.yml  new_updates.md  pyproject.toml  req.txt  (+21 more)
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agentflow/adapters/: __init__.py
agentflow/checkpointer/: __init__.py  base_checkpointer.py  in_memory_checkpointer.py  pg_checkpointer.py
agentflow/communication/: __init__.py  a2a.py  agent_communicator.py  registry.py  router.py
agentflow/evaluation/: __init__.py  builder.py  eval_config.py  eval_result.py  eval_set.py  evaluator.py  presets.py  quick_eval.py  testing.py
agentflow/exceptions/: __init__.py  graph_error.py  node_error.py  recursion_error.py  storage_exceptions.py
agentflow/graph/: __init__.py  agent.py  base_agent.py  compiled_graph.py  edge.py  node.py  state_graph.py
agentflow/prebuilt/: __init__.py
agentflow/protocols/: __init__.py  acp.py
agentflow/publisher/: __init__.py  base_publisher.py  console_publisher.py  events.py  kafka_publisher.py  publish.py  rabbitmq_publisher.py  redis_publisher.py
agentflow/qa/: __init__.py
agentflow/runtime/: __init__.py
agentflow/state/: agent_state.py  base_context.py  execution_state.py  message.py  message_context_manager.py
agentflow/store/: __init__.py  base_store.py  mem0_store.py  qdrant_store.py  store_schema.py
agentflow/testing/: __init__.py  in_memory_store.py  mock_mcp.py  mock_tools.py  quick_test.py  test_agent.py  test_result.py
agentflow/utils/: __init__.py  background_task_manager.py  callable_utils.py  callbacks.py  command.py  constants.py  converter.py  decorators.py  id_generator.py  logging.py  metrics.py  shutdown.py  thread_info.py  validators.py
docs/: CALLBACK_SYSTEM_GUIDE.md  CUSTOM_STATE_GUIDE.md  DEPENDENCY_INJECTION_IMPLEMENTATION.md  ERROR_HANDLING_GUIDELINES.md  Lifecycle.md  STREAMING_IMPLEMENTATION_SUMMARY.md  google-genai-adapter.md  index.md  long_term_memory.md  prebuilt-agent-architecture-plan.md  stream-emitter-plan.md
docs/Concept/: Callbacks.md  Command.md  ERROR_HANDLING_GUIDELINES.md  Threadname.md  async-patterns.md  background-task-manager.md  dependency-injection.md  graceful-shutdown.md  handoff.md  id_generator.md  index.md  publisher.md  response_converter.md
docs/Prebuilt/: swarm-agent.md
docs/Tutorial/: agent-class.md  embedding.md  graph.md  handoff.md  index.md  input_validation.md  long_term_memory.md  mem0_store.md  plan_act_reflect.md  qdrant_store.md  rag.md  state.md  tool-decorator.md
docs/api/: exceptions.md  graph.md  index.md  publisher.md  state.md  utils.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: callback-system.md  custom-state.md  dependency-injection.md  logging.md  optional-dependencies.md  pause-resume.md  streaming.md
docs/plans/: ABSTRACTION_REDUCTION_PHILOSOPHY.md  AGENT_EVALUATION_PLAN.md  ANTHROPIC_CONVERTER_IMPLEMENTATION.md  AgentRegistrationPlan.md  ArchitectureGaps.md  EVALUATION_SIMPLIFICATION_PLAN.md  LLM_LIBRARY_COMPARISON.md  LLM_SDK_MIGRATION_PLAN.md  MemoryPlan.md  QUICK_DECISION_SUMMARY.md  README.md  TestingPlan.md
docs/reference/: index.md  overview.md
docs/tutorials/: callback-validation.md  custom-state.md  deep-research-agent.md  github-mcp.md  index.md  network-agent.md  rag-agent.md  react-agent.md  react-mcp.md  react-streaming.md
example/: comprehensive_streaming_test.py  dependency_injection_example.py  enhanced_injectable_demo.py  enhanced_simple_graph.py  final_streaming_demo.py  gemini_demo.py  graph_demo.py  injectable_demo.py  multi_agent_demo.py  multi_agent_weather_demo.py  pause_resume_demo.py  simple_graph.py  streaming_demo.py  test_basic_streaming.py  test_comprehensive_pause_resume.py  test_debug_streaming.py  test_pause_resume.py  test_resume_input.py  test_security_performance_logging.py  test_simple_streaming.py  test_unified_invoke.py  tool_node_demo.py  unified_invoke_demo.py  unified_pause_resume_demo.py  updated_pause_resume_demo.py
examples/: google_genai_example.py  litellm_multimodal_demo.py  multimodal_agent_example.py
examples/agent-class/: graph.py
examples/agent-graph-integration/: google_gemini_example.py
examples/callback-validation/: __init__.py  (+1 more)
normal_tests/: debug_deep.py  debug_state.py  debug_streaming.py  demo_event_publishing.py  minimal_test.py  test_callbacks.py  test_conversion.py  test_custom_state_comprehensive.py  test_event_publishing.py  test_injectable_changes.py  test_logging.py  test_simple_logging.py
pyagenity/: __init__.py
release_notes/: RELEASE_NOTES_0.5.7.md
scripts/: generate_docs.py
taf/: __init__.py
tests/: __init__.py  conftest.py  debug_graph_state.py  debug_minimal.py  debug_state.py  debug_step_by_step.py  minimal_test.py  test_background_task_manager.py  test_base_context.py  test_base_converter.py  test_basic.py  test_callback_integration.py  test_callbacks.py  test_checkpointer_integration.py  test_converter.py  test_graph_integration.py  test_litellm_converter.py  test_memory_management.py  test_model_response_converter.py  test_multiagent.py  test_pg_checkpointer.py  test_skills.py  test_skills_session.py
(+691 files in other folders)
